--- a/index.html
+++ b/index.html
@@ -63,9 +63,6 @@
             <p>Saya adalah seorang Mahasiswa STMIK Adhi Guna
             </p>
           </div>
-          <!-- <div class="featured-text-btn">
-            <button class="btn blue-btn" ><a href="#about" style="text-decoration: none; color: white;">About me</a></button>
-          </div> -->
         </div>
         <div class="featured-image">
           <div class="image">
@@ -85,7 +82,7 @@
             <div class="col">
                 <div class="about-info">
                     <h3>Biodata Saya</h3>
-                    <p>Saya Salsa, berasal dari Poso Pesisir Utara, umur saya saat ini 20th, dan saya mahasiswa semeter 5 di kampus STMIK Adhi Guna Palu
+                    <p>Saya Salsa, berasal dari Parigi, umur saya saat ini 20th, dan saya mahasiswa semeter 3 di kampus STMIK Adhi Guna Palu
                     </p>
                 </div>
             </div>
@@ -119,12 +116,6 @@
           </div>
         </div>
       </section>
-
-      <!-- -------------- Project ---------------- -->
-
-     
-      
-
 
       <!-- -------------- CONTACT BOX ---------------- -->
 
